--- a/index.html
+++ b/index.html
@@ -141,6 +141,386 @@
         <!-- /.container -->
     </section>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-5 mb-md-0">
+                    <div class="advantages-wrapper">
+                        <img src="img/advantages-1.png" alt="Только прямые поставки цветов из Голландии" class="advantages-image">
+                    </div>
+                    <h3 class="advantages-title">Только прямые поставки цветов из&NonBreakingSpace; Голландии</h3>
+                </div>
+                <!-- /.col -->
+                <div class="col-md-4 mb-5 mb-md-0">
+                    <div class="advantages-wrapper">
+                        <img src="img/advantages-2.png" alt="Наши флористы имеют 10 летний стаж работы" class="advantages-image">
+                    </div>
+                    <h3 class="advantages-title">Наши флористы имеют 10 летний стаж работы</h3>
+                </div>
+                <!-- /.col -->
+                <div class="col-md-4 mb-5 mb-md-0">
+                    <div class="advantages-wrapper">
+                        <img src="img/advantages-3.png" alt="Все цветы вручную отбираются нашими флористами" class="advantages-image">
+                    </div>
+                    <h3 class="advantages-title">Все цветы вручную отбираются нашими флористами</h3>
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <section class="goods">
+        <div class="container">
+            <h2 class="section-title">Собери свой букет <span class="text-red">прямо сейчас!</span></h2>
+            <p class="section-description">Выберите желаемые цветы и наши флористы их оформят и доставят лично в руки!</p>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/rose.png" alt="rose" class="card-image">
+                        <h3 class="card-title">Розы</h3>
+                        <span class="card-label">Выберите цвет:</span>
+
+                        <div class="colors d-flex align-items-center justify-content-between">
+                            <label class="color-label white" for="white" ></label>
+                            <input  class="color-input" type="radio" name="color" id="white" value="white">
+
+                            <label class="color-label biege" for="biege" ></label>
+                            <input  class="color-input" type="radio" name="color" id="biege" value="biege">
+
+                            <label class="color-label pink" for="pink" ></label>
+                            <input  class="color-input" type="radio" name="color" id="pink" value="pink">
+
+                            <label class="color-label red" for="red" ></label>
+                            <input  class="color-input" type="radio" name="color" id="red" value="red">
+
+                            <label class="color-label blue" for="blue" ></label>
+                            <input  class="color-input" type="radio" name="color" id="blue" value="blue">
+
+
+                        </div>
+                        <!-- /.colors -->
+
+                        <span class="card-label">Количество:</span>
+
+                        <div class="counter-group d-flex align-items-center justify-content-center">
+                            <button class="counter-button">-</button>
+                            <input type="text" class="counter-input" value="1">
+                            <button class="counter-button">+</button>
+                        </div>
+                        <!-- /.counter-group -->
+
+                        <button class="button card-button">В корзину</button>
+
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col-md-3 -->
+            </div>
+            <!-- /.row -->
+
+            <a href="#" class="more">Все цветы</a>
+        </div>
+        <!-- /.container -->
+    </section>
+
+
 
 
 
