--- a/index.html
+++ b/index.html
@@ -520,6 +520,15 @@
         <!-- /.container -->
     </section>
 
+    <section class="offer">
+        <div class="container">
+            <h2 class="section-title offer-title">Остались вопросы?</h2>
+            <a href="№" class="offer-link">Закажите звонок нашего флориста!</a>
+            <span class="offer-label">или позвоните по телефону</span>
+            <a href="tel:+380977800053" class="offer-phone">+380977800053</a>
+        </div>
+        <!-- /.container -->
+    </section>
 
 
 
