--- a/index.html
+++ b/index.html
@@ -531,6 +531,71 @@
     </section>
 
 
+    <footer class="footer">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-6 mb-5 mb-md-0">
+                    <nav>
+                        <ul class="footer-menu d-flex">
+                            <li class="footer-menu-item">
+                                <a href="#" class="footer-menu-link">Доставка</a>
+                            </li>
+                            <li class="footer-menu-item">
+                                <a href="#" class="footer-menu-link">Оплата</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="social">
+                        Присоединяйся к нам! <a href="https://vk.com/" class="social-link">
+                            <img src="img/vk.png" alt="vk">
+                        </a>
+                    </div>
+                </div>
+                <!-- /.col-md-6 -->
+                <div class="col-md-6 footer-info">
+                    <span class="footer-label">Отдел обслуживания клиентов</span>
+                    <a href="tel:+380977800053" class="footer-phone">+380977800053</a>
+                    <span class="footer-label">Ежедневно, круглосуточно.</span>
+                </div>
+                <!-- /.col-md-6 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </footer>
+
+    <section class="end">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <a href="/">
+                    <img class="end-logo" src="img/logo-2.png" alt="Flowers">
+                </a>
+                </div>
+                <!-- /.col-md-3 -->
+                <div class="col-md-6">
+                    <span class="end-description">
+                        Интернет-магазин <br> цветов с доставкой <br> по всей <span class="text-color-red">Украине</span>
+                    </span>
+                </div>
+                <!-- /.col-md-6 -->
+                <div class="col-md-3">
+                    <span class="end-info">Звонок по Украине бесплатный</span>
+                </div>
+                <!-- /.col-md-3 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <div class="modal" id="modal">
+        <h2 class="modal-title">Закажите обратный звонок</h2>
+        <form action="#">
+            <input type="tel" class="modal-input" placeholder="+380 (__) __-__-___">
+            <button class="button modal-button">Перезвоните мне</button>
+        </form>
+    </div>
 
 
 
